# jslang

./: .gitignore  build.gradle  requirements.txt  settings.gradle
.github/workflows/: build-all.yml
gradle/wrapper/: gradle-wrapper.properties
natives/: CMakeLists.txt  jni_utils.cpp  jslang.cpp  jslang_extract.py
src/main/java/moyongxin/jslang/: Array.java  CompilerOptionEntry.java  CompilerOptionValue.java  GlobalSession.java  JSlang.java  TargetDesc.java
src/main/java/moyongxin/jslang/system/: CString.java  InteropUtils.java  LibraryLoader.java  PointerArray.java
